2021-XX-XX 4.2.5:

	Bugfixes:

	all : fixed compiler crash in complex constraints chains (#10445)
	js : fixed constructors with rest arguments when compiling for ES3, ES5 (#10490)
	php : excluded E_DEPRECATED notices from error reporting (#10502)
	nullsafety : fixed false error on extern var fields without initialization (#10448)

2021-10-22 4.2.4:

	New features:

	hl : add clipboard support in hl 1.12 (#10320)

	General improvements:

	all : improved error messages upon directory creation failures (#10361)
	eval : added `%` operator to `eval.numbers.Int64` and `eval.numbers.UInt64` (#10411)

	Bugfixes:

	all : fixed errors on final vars modification with `+=`, `*=` etc operations (#10325)
	all : fixed hanging of MainLoop.add on threaded targets (#10308, #10329)
	all : fixed compiler crash when resolving overloads with not enough arguments (#10434)
	all : fixed non-static `@:to` methods on `@:multiType` abstracts (#10145)
	analyzer : fixed analyzer on overloads (#10405)
	analyzer : fixed issues with fields initialization expressions (#10405)
	display : improved code completion in anonymous objects declarations (#10414)
	js : fixed IntMap for keys greater than 2^31 (#10316)
	js : workaround to fix sourcemaps on Firefox in Windows (#10217)
	js : delayed truncation of the output file on `Compiler.setCustomJSGenerator` (#10387)
	cs/java : fixed rest arguments for cases when only one argument is provided (#10315)
	php : fixed type of `php.db.PDO.ATTR_DRIVER_NAME` (#10319)
	eval : fixed signature of `eval.luv.Tcp.noDelay` method
	lua : fixed `string.length` when `string` has type of a type parameter constrained to `String` (#10343)
	jvm : fixed `Reflect.compare()` for different number types (#10350)
	python : fixed exceptions on tracing some native values (#10440)

2021-07-01 4.2.3:

	General improvements:

	all : analyzer optimizations
	macro : support maps in `haxe.macro.Context.makeExpr` (#10259)