@@ -909,6 +909,13 @@
 		"platforms": ["eval"]
 	},
 	{
+		"name": "PhpAttribute",
+		"metadata": ":php.attribute",
+		"doc": "Adds a PHP attribute to the annotated symbol. Meta argument expects a string constant. E.g. `@:php.attribute('\\\\my\\\\Attr(123)')` will be generated as `#[\\my\\Attr(123)]` in the compiled php file.",
+		"platforms": ["php"],
+		"links": ["https://www.php.net/manual/en/language.attributes.overview.php"]
+	},
+	{
 		"name": "PhpGlobal",
 		"metadata": ":phpGlobal",
 		"doc": "Indicates that static fields of an extern class actually are located in the global PHP namespace.",
